...

                    <TextView
                        android:id="@+id/team_a_runs"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
...

                    <TextView
                        android:id="@+id/team_a_wickets"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
...

                <Button
                    android:id="@+id/scoreSixRunsTeamA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                <Button
                    android:id="@+id/scoreFourRunsTeamA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                <Button
                    android:id="@+id/scoreDoublesTeamA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                <Button
                    android:id="@+id/scoreSinglesTeamA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                    <TextView
                        android:id="@+id/team_b_runs"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
...

                    <TextView
                        android:id="@+id/team_b_wickets"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
...

                <Button
                    android:id="@+id/scoreSixRunsTeamB"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                <Button
                    android:id="@+id/scoreFourRunsTeamB"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                <Button
                    android:id="@+id/scoreDoublesTeamB"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                <Button
                    android:id="@+id/scoreSinglesTeamB"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                    <Button
                        android:id="@+id/bowler1TeamA"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
...

                    <TextView
                        android:id="@+id/wickets_taken_team_a_bowler_1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
...

                    <Button
                        android:id="@+id/bowler2TeamA"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
...

                    <TextView
                        android:id="@+id/wickets_taken_team_a_bowler_2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
...

                    <Button
                        android:id="@+id/bowler3TeamA"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
...

                    <TextView
                        android:id="@+id/wickets_taken_team_a_bowler_3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
...

                    <Button
                        android:id="@+id/bowler4TeamA"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
...

                    <TextView
                        android:id="@+id/wickets_taken_team_a_bowler_4"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
...

                    <Button
                        android:id="@+id/bowler1TeamB"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
...

                    <TextView
                        android:id="@+id/wickets_taken_team_b_bowler_1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
...

                    <Button
                        android:id="@+id/bowler2TeamB"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
...

                    <TextView
                        android:id="@+id/wickets_taken_team_b_bowler_2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
...

                    <Button
                        android:id="@+id/bowler3TeamB"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
...

                    <TextView
                        android:id="@+id/wickets_taken_team_b_bowler_3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
...

                    <Button
                        android:id="@+id/bowler4TeamB"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
...

                    <TextView
                        android:id="@+id/wickets_taken_team_b_bowler_4"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
...
